--- a/predavanja/jupyter/views/index.html
+++ b/predavanja/jupyter/views/index.html
@@ -4,5 +4,5 @@
     <li><a href="pozdravi/{{uporabnik or 'svet'}}/">Pozdrav</a> (s <a href="pozdravi_predloga/{{uporabnik or 'svet'}}/">predlogo</a>)</li>
     <li><a href="kvadriraj/{{len(uporabnik) if uporabnik else 42}}">Kvadriraj</a></li>
     <li><a href="primer">Primer</a></li>
-    <li><a href="obrazec/">Obrazci</a></li>
+    <li><a href="obrazec">Obrazci</a></li>
 </ul>
