--- a/predavanja/jupyter/views/obrazec.html
+++ b/predavanja/jupyter/views/obrazec.html
@@ -6,7 +6,7 @@ Pozdravljen, {{uporabnik}}!
 
 <h1>Obrazec z metodo <code>GET</code></h1>
 
-<form action="../sestej/" method="GET">
+<form action="sestej/" method="GET">
     a: <input type="text" name="a" />
     b: <input type="text" name="b" />
     <input type="submit" value="a + b" />
@@ -14,11 +14,11 @@ Pozdravljen, {{uporabnik}}!
 
 <h1>Obrazec z metodo <code>POST</code></h1>
 
-<form action="../obrazec/" method="POST">
+<form action="obrazec/" method="POST">
     Uporabnik: <input type="text" name="uporabnik" />
     <input type="submit" value="Prijava" />
 </form>
 
-<form action="../odjava/" method="POST">
+<form action="odjava/" method="POST">
     <input type="submit" value="Odjava" />
 </form>
