Začetno ogrodje spletne aplikacije

--- a/predavanja/jupyter/views/primer.html
+++ b/predavanja/jupyter/views/primer.html
@@ -6,7 +6,7 @@ vrstica besedila
 % else:
 %        a = 100
 % end
-odgovor je {{a}}
+odgovor je {{povecaj(a)}}
 
 <ul>
 % for i in range(5):
@@ -14,4 +14,4 @@ odgovor je {{a}}
 % end
 </ul>
 
-<img src="static/slike/sqlitestudio2.png" />
+<img src="static/slike/sqlitestudio2.png" alt="Slika SQLiteStudio" />
