--- a/predavanja/filmi/views/filmi.najbolje-ocenjeni.html
+++ b/predavanja/filmi/views/filmi.najbolje-ocenjeni.html
@@ -5,7 +5,7 @@
 <form action="/filmi/najbolje-ocenjeni/" method="GET">
     <div class="field has-addons">
         <div class="control">
-            <input class="input" type="text" name="leto" placeholder="Vpiši leto" value="{{leto}}">
+            <input class="input" type="text" name="leto" placeholder="Vpiši leto" value="{{leto}}" required />
         </div>
         <div class="control">
             <button class="button is-info">
