--- a/predavanja/filmi/views/osebe.poisci.html
+++ b/predavanja/filmi/views/osebe.poisci.html
@@ -5,7 +5,7 @@
 <form action="/osebe/poisci/" method="GET">
     <div class="field has-addons">
         <div class="control">
-            <input class="input" type="text" name="ime" placeholder="Vpiši ime" value="{{ime}}">
+            <input class="input" type="text" name="ime" placeholder="Vpiši ime" value="{{ime}}" required />
         </div>
         <div class="control">
             <button class="button is-info">
