--- a/predavanja/filmi/views/filmi.podatki.html
+++ b/predavanja/filmi/views/filmi.podatki.html
@@ -92,6 +92,20 @@
             </li>
         % end
         </ol>
+        % if uporabnik.admin:
+        <form action="/filmi/{{film.id}}/I/dodaj/" method="GET">
+            <div class="field has-addons">
+                <div class="control">
+                    <input class="input" type="text" name="ime" placeholder="Vpiši ime" required />
+                </div>
+                <div class="control">
+                    <button class="button is-info">
+                        Dodaj
+                    </button>
+                </div>
+              </div>
+        </form>
+        % end
     </div>
     % end
     % if reziserji or uporabnik.admin:
@@ -133,6 +147,20 @@
         </li>
         % end
         </ol>
+        % if uporabnik.admin:
+        <form action="/filmi/{{film.id}}/R/dodaj/" method="GET">
+            <div class="field has-addons">
+                <div class="control">
+                    <input class="input" type="text" name="ime" placeholder="Vpiši ime" required />
+                </div>
+                <div class="control">
+                    <button class="button is-info">
+                        Dodaj
+                    </button>
+                </div>
+              </div>
+        </form>
+        % end
     </div>
     % end
 </div>
