Spremembe vzorčne aplikacije s predavanj

--- a/predavanja/jupyter/views/obrazec.html
+++ b/predavanja/jupyter/views/obrazec.html
@@ -22,3 +22,5 @@ Pozdravljen, {{uporabnik}}!
 <form action="odjava/" method="POST">
     <input type="submit" value="Odjava" />
 </form>
+
+% include('seznam.html')
