--- a/predavanja/jupyter/views/pozdravi.html
+++ b/predavanja/jupyter/views/pozdravi.html
@@ -1,3 +1,4 @@
 % rebase('osnova.html', naslov=f'Pozdravna stran za {ime}')
 <h1>Živjo, <em>{{ime}}</em>!</h1>
-Kako gre?
+Kako gre? <br/>
+Tvoje ime je krajše od {{povecaj(len(ime))}} znakov.
