--- a/predavanja/jupyter/views/osnova.html
+++ b/predavanja/jupyter/views/osnova.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <title>{{naslov}}</title>
+    <style>
+        body {
+          background-color: lightgray;
+        }
+    </style>
   </head>
   <body>
     {{!base}}
