--- a/predavanja/filmi/views/filmi.dodaj.html
+++ b/predavanja/filmi/views/filmi.dodaj.html
@@ -2,67 +2,7 @@
 % film = Film(**preberi_obrazec("filmi-dodaj"))
 
 <form action="/filmi/dodaj/" method="POST">
-    <div class="field">
-        <label class="label">Naslov</label>
-        <p class="control">
-            <input class="input" type="text" name="naslov" placeholder="Naslov filma" value="{{film.naslov}}" />
-        </p>
-    </div>
-    <div class="field">
-        <label class="label">Dolžina</label>
-        <p class="control">
-            <input class="input" type="number" name="dolzina" placeholder="Dolžina filma" value="{{film.dolzina}}" min="0" />
-        </p>
-    </div>
-    <div class="field">
-        <label class="label">Leto</label>
-        <p class="control">
-            <input class="input" type="number" name="leto" placeholder="Leto filma" value="{{film.leto}}" min="1900" />
-        </p>
-    </div>
-    <div class="field">
-        <label class="label">Ocena</label>
-        <p class="control">
-            <input class="input" type="number" name="ocena" placeholder="Ocena filma" value="{{film.ocena}}" min="0" max="10" step="0.1" />
-        </p>
-    </div>
-    <div class="field">
-        <label class="label">Metascore</label>
-        <p class="control">
-            <input class="input" type="number" name="metascore" placeholder="Metascore filma" value="{{film.metascore}}" min="0" />
-        </p>
-    </div>
-    <div class="field">
-        <label class="label">Glasovi</label>
-        <p class="control">
-            <input class="input" type="number" name="glasovi" placeholder="Glasovi filma" value="{{film.glasovi}}" min="0" />
-        </p>
-    </div>
-    <div class="field">
-        <label class="label">Zaslužek</label>
-        <p class="control">
-            <input class="input" type="number" name="zasluzek" placeholder="Zaslužek filma" value="{{film.zasluzek}}" min="0" />
-        </p>
-    </div>
-    <div class="field">
-        <label class="label">Oznaka</label>
-        <p class="control">
-            <div class="select">
-                <select name="oznaka">
-                    <option value="">---</option>
-                    % for oznaka in Oznaka.seznam():
-                    <option value="{{oznaka.kratica}}" {{'selected' if oznaka == film.oznaka else ''}}>{{oznaka}}</option>
-                    % end
-                </select>
-            </div>
-        </p>
-    </div>
-    <div class="field">
-        <label class="label">Opis</label>
-        <p class="control">
-            <textarea class="textarea" name="opis" placeholder="Opis filma">{{film.opis}}</textarea>
-        </p>
-    </div>
+    % include('filmi.obrazec.html')
     <div class="field">
         <p class="control">
             <button class="button is-success">
