--- a/predavanja/filmi/views/osebe.poisci.html
+++ b/predavanja/filmi/views/osebe.poisci.html
@@ -16,20 +16,14 @@
 % if ime:
 <div class="content">
     <p>
-        % if osebe:
-        <ol start="{{zacetek}}">
+        % if osebe.skupaj:
+        <ol start="{{osebe.stran * osebe.stevilo + 1}}">
             % for oseba in osebe:
             <li><a href="/osebe/oseba/{{oseba.id}}/">{{oseba}}</a></li>
             % end
         </ol>
 
-        <p>
-            % if stran > 0:
-            <a href="/osebe/poisci/?ime={{ime}}&stran={{stran-1}}">Nazaj</a>
-            |
-            % end
-            <a href="/osebe/poisci/?ime={{ime}}&stran={{stran+1}}">Naprej</a>
-        </p>
+        % include('strani.html', seznam=osebe, url='/osebe/poisci/', parametri=dict(ime=ime))
         % else:
         Ne najdem osebe z imenom <em>{{ime}}</em>.
         % end
