--- a/predavanja/filmi/views/osnova.html
+++ b/predavanja/filmi/views/osnova.html
@@ -2,7 +2,7 @@
 % if not defined('uporabnik'):
 %     uporabnik = prijavljeni_uporabnik()
 % end
-% sporocilo = preberi_sporocilo()
+% sporocilo, vrsta = preberi_sporocilo()
 
 <!DOCTYPE html>
 <html>
@@ -72,7 +72,7 @@
                     <div class="navbar-item">
                         <div class="buttons">
                             % if uporabnik:
-                            <a class="button is-static is-ghost">
+                            <a href="/spremeni-geslo/" class="button is-primary is-light">
                                 <strong>{{uporabnik}}</strong>
                             </a>
                             <form action="/odjava/" method="POST">
@@ -94,7 +94,7 @@
             </div>
         </nav>
         % if sporocilo:
-        <div class="notification is-danger is-light">
+        <div class="notification is-{{vrsta}} is-light">
             <button class="delete"></button>
             {{sporocilo}}
         </div>
