Spremembe primerov v delovnih zvezkih

--- a/predavanja/jupyter/views/osnova.html
+++ b/predavanja/jupyter/views/osnova.html
@@ -2,11 +2,7 @@
 <html>
   <head>
     <title>{{naslov}}</title>
-    <style>
-        body {
-          background-color: lightgray;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="static/css/stil.css" />
   </head>
   <body>
     {{!base}}
